app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-mongo-express
  labels:
    name: k8s-mongo-express
