mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gr-samples-mongo-express-deployment
  labels:
    app: gr-samples-mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gr-samples-mongo-express
  template:
    metadata:
      labels:
        app: gr-samples-mongo-express
    spec:
      containers:
      - name: gr-samples-mongo-express
        image: mongo-express
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 8081
