mongo-express-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gr-samples-mongo-express-external-service
spec:
  selector:
    app: gr-samples-mongo-express
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 31081
