mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gr-samples-mongo-deployment
  labels:
    app: gr-samples-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gr-samples-mongo
  template:
    metadata:
      labels:
        app: gr-samples-mongo
    spec:
      containers:
      - name: gr-samples-mongodb
        image: mongo:latest
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: gr-samples-mongo-service
spec:
  selector:
    app: gr-samples-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
