mongo-express-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gr-samples-mongo-express-service
spec:
  selector:
    app: gr-samples-mongo-express
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gr-samples-mongo-express-ingress
  labels:
    name: gr-samples-mongo-express-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mongo-express.grayraccoon.com
    secretName: mongo-express-tls-secret
  rules:
  - host: mongo-express.grayraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gr-samples-mongo-express-service
            port:
              number: 8081
