mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gr-samples-mongo-express-ingress
  labels:
    name: gr-samples-mongo-express-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - mongo-express.grayraccoon.com
    secretName: mongo-express-tls-secret
  ingressClassName: "nginx"
  rules:
  - host: mongo-express.grayraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gr-samples-mongo-express-service
            port:
              number: 8081
